control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-observed-generation-bump.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: observed-generation-bump
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
